--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
+    "@types/js-cookie": "^3.0.3",
     "@types/react-redux": "^7.1.25",
     "@types/styled-components": "^5.1.26"
   }
