--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-text-mask": "^5.5.0",
     "redux": "^4.2.1",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
@@ -52,6 +55,7 @@
     "@types/bootstrap": "^5.2.6",
     "@types/js-cookie": "^3.0.3",
     "@types/react-redux": "^7.1.25",
+    "@types/react-text-mask": "^5.4.11",
     "@types/styled-components": "^5.1.26"
   }
 }
